--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Tailwind CSS</title>
-    <link rel="icon" href="dist/img/Yamato.jpeg">
-    <link href="dist/css/final.css" rel="stylesheet" />
+    <link rel="icon" href="./Yamato.jpeg">
+    <link href="./final.css" rel="stylesheet" />
     <script>
       if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
         document.documentElement.classList.add('dark');
@@ -82,7 +82,7 @@
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
-              <img src="dist/img/Waifume.png" alt="Alicha Dinastira" class="relative z-10 mx-auto max-w-full" />
+              <img src="./Waifume.png" alt="Alicha Dinastira" class="relative z-10 mx-auto max-w-full" />
               <span class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
                 <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -169,28 +169,28 @@
         <div class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12">
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="dist/img/portfolio/JavaScript.png" alt="JavaScript Program" width="w-full" />
+              <img src="./JavaScript.png" alt="JavaScript Program" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">JavaScript Program</h3>
             <p class="text-base font-medium text-secondary">JavaScript adalah bahasa pemrograman yang digunakan untuk membuat interaktivitas di halaman web, Ini memungkinkan Anda untuk menambahkan logika, validasi formulir, animasi, dan banyak fungsi lainnya.Contoh: function greeting() { alert('Halo, dunia!'); }</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="dist/img/portfolio/MyWebsite.jpg" alt="My Website" width="w-full" />
+              <img src="./MyWebsite.jpg" alt="My Website" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">My Website</h3>
             <p class="text-base font-medium text-secondary">Sebuah karya digital yang memancarkan kecanggihan. Dengan menggunakan HTML sebagai dasar, Saya telah membentuk struktur yang kokoh. Kemudian, dengan bantuan CSS, tampilan halaman ini dipadukan menjadi sebuah karya seni, dengan warna, tata letak, dan desain yang mengagumkan. JavaScript memberikan sentuhan ajaib dengan menyematkan fungsi interaktif, seperti animasi halus dan pengalaman pengguna yang luar biasa.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="dist/img/portfolio/Twice.png" alt="Github Account" width="w-full" />
+              <img src="./Twice.png" alt="Github Account" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">E-Commerce</h3>
             <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="dist/img/portfolio/CodeProg.jpg" alt="Code Programming" width="w-full" />
+              <img src="./CodeProg.jpg" alt="Code Programming" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Tribute Page</h3>
             <p class="text-base font-medium text-secondary">Tribute Page adalah jenis halaman web yang dibuat untuk menghormati atau mengenang seseorang atau sesuatu. Biasanya, halaman ini berisi informasi tentang orang atau hal tersebut, sejarah, prestasi, atau kontribusi mereka.</p>
@@ -351,6 +351,6 @@
       <span class="mt-2 block h-5 w-5 rotate-45 border-t-2 border-l-2"></span>
     </a>
 
-    <script src="dist/js/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
