--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Tailwind CSS</title>
+    <title>Webiste Alicha | Creator & Developer</title>
     <link rel="icon" href="./Yamato.jpeg">
     <link href="./final.css" rel="stylesheet" />
     <script>
@@ -113,7 +113,7 @@
             </p>
             <div class="flex items-center">
               <a
-                href="../external.html?link=https://instagram.com/fadlangenz"
+                href="https://instagram.com/fadlangenz"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -125,7 +125,7 @@
                 </svg>
               </a>
               <a
-                href="../external.html?link=https://wa.me/qr/RTFQEQ7MLSZCJ1"
+                href="https://wa.me/qr/RTFQEQ7MLSZCJ1"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -137,7 +137,7 @@
                 </svg>
               </a>
               <a
-                href="../external.html?link=https://github.com/AlichaIcha"
+                href="https://github.com/AlichaIcha"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -212,7 +212,7 @@
 
           <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
             <div class="mb-10 overflow-hidden rounded-xl bg-white shadow-lg dark:bg-slate-800">
-              <img src="../external.html?link=https://alichaicha.github.io" alt="Bio Profile" class="w-full" />
+              <img src="https://alichaicha.github.io" alt="Bio Profile" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
                   <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Profile Bio Link Kami</a>
@@ -307,7 +307,7 @@
         <div class="w-full border-t border-slate-700 pt-10">
           <div class="mb-5 flex items-center justify-center">
             <a
-              href="../external.html?link=https://instagram.com/fadlangenz"
+              href="https://instagram.com/fadlangenz"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
@@ -320,7 +320,7 @@
             </a>
 
               <a
-                href="../external.html?link=https://wa.me/qr/RTFQEQ7MLSZCJ1"
+                href="https://wa.me/qr/RTFQEQ7MLSZCJ1"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
@@ -333,7 +333,7 @@
             </a>
 
               <a
-                href="../external.html?link=https://github.com/AlichaIcha"
+                href="https://github.com/AlichaIcha"
                 target="_blank"
                 class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
               >
